add auth for api
